Add custom exceptoins and logs