@@ -1,14 +1,15 @@
 package ru.netology.service;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import ru.netology.dto.FileDto;
 import ru.netology.entity.FileEntity;
 import ru.netology.exception.FileNotFoundException;
+import ru.netology.exception.FileStorageException;
 import ru.netology.repository.FileRepository;
 
 import java.io.IOException;
@@ -18,8 +19,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class FileService {
 
@@ -34,62 +35,75 @@ public class FileService {
     }
 
     private void initStorage() {
+        log.info("Attempting to create storage");
         try {
             Files.createDirectories(storagePath);
+            log.info("Storage successfully created");
         } catch (IOException e) {
-            throw new RuntimeException("Could not create storage directory", e);
+            log.error("Could not create storage directory");
+            throw new FileStorageException("Could not create storage directory", e);
         }
     }
 
-    public List<FileDto> getFiles(int limit) {
+    public List<FileEntity> getFiles(int limit) {
+        log.info("Fetching list of files with limit: {}", limit);
         return fileRepository.findAll().stream()
                 .limit(limit)
-                .map(file -> new FileDto(file.getFilename(), file.getFilesize()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void uploadFile(String filename, MultipartFile file) {
+    public FileEntity uploadFile(String filename, MultipartFile file) {
+        log.info("Attempting to upload file: {} (size: {} bytes)", filename, file.getSize());
         try {
             Path destination = storagePath.resolve(filename);
             Files.copy(file.getInputStream(), destination, StandardCopyOption.REPLACE_EXISTING);
 
             FileEntity fileEntity = new FileEntity(filename, destination.toString(), file.getSize());
-            fileRepository.save(fileEntity);
+            log.info("File '{}' successfully uploaded to '{}'", filename, destination);
+            return fileRepository.save(fileEntity);
         } catch (IOException e) {
-            throw new RuntimeException("Failed to store file " + filename, e);
+            log.error("Failed to upload file: {}", filename, e);
+            throw new FileStorageException("Failed to upload file: " + filename, e);
         }
     }
 
     public Resource downloadFile(String filename) {
+        log.info("Attempting to download file: {}", filename);
         try {
             Path filePath = storagePath.resolve(filename).normalize();
             Resource resource = new UrlResource(filePath.toUri());
             if (resource.exists() || resource.isReadable()) {
+                log.info("File '{}' successfully downloaded", filename);
                 return resource;
             } else {
+                log.warn("File '{}' not found or not readable", filename);
                 throw new FileNotFoundException("Could not read file: " + filename);
             }
         } catch (MalformedURLException e) {
-            throw new RuntimeException("Error reading file: " + filename, e);
+            log.error("Error reading file: {}", filename, e);
+            throw new FileStorageException("Error reading file: " + filename, e);
         }
     }
 
-    public void deleteFile(String filename) {
-        FileEntity fileEntity = fileRepository.findByFilename(filename)
-                .orElseThrow(() -> new FileNotFoundException("File not found: " + filename));
-
-        try {
-            Path filePath = Paths.get(fileEntity.getFilepath());
-            Files.deleteIfExists(filePath);
-            fileRepository.delete(fileEntity);
-        } catch (IOException e) {
-            throw new RuntimeException("Error deleting file: " + filename, e);
-        }
+    public boolean deleteFile(String filename) {
+        log.info("Attempting to delete file: {}", filename);
+        return fileRepository.findByFilename(filename)
+                .map(file -> {
+                    fileRepository.delete(file);
+                    log.info("File '{}' successfully delete", file);
+                    return true;
+                })
+                .orElse(false);
     }
 
-    public void updateFile(String filename, String newFilename) {
+    public FileEntity updateFile(String filename, String newFilename) {
+        log.info("Attempting to rename file '{}' to '{}'", filename, newFilename);
+
         FileEntity fileEntity = fileRepository.findByFilename(filename)
-                .orElseThrow(() -> new FileNotFoundException("File not found: " + filename));
+                .orElseThrow(() -> {
+                    log.warn("File '{}' not found during rename", filename);
+                    return new FileNotFoundException("File not found: " + filename);
+                });
 
         Path sourcePath = Paths.get(fileEntity.getFilepath());
         Path targetPath = storagePath.resolve(newFilename);
@@ -98,9 +112,11 @@ public class FileService {
             Files.move(sourcePath, targetPath, StandardCopyOption.REPLACE_EXISTING);
             fileEntity.setFilename(newFilename);
             fileEntity.setFilepath(targetPath.toString());
-            fileRepository.save(fileEntity);
+            log.info("File '{}' successfully renamed to '{}'", filename, newFilename);
+            return fileRepository.save(fileEntity);
         } catch (IOException e) {
-            throw new RuntimeException("Error renaming file: " + filename, e);
+            log.error("Failed to rename file '{}' to '{}'", filename, newFilename, e);
+            throw new FileStorageException("Error renaming file: " + filename, e);
         }
     }
 }
